--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- navigation bar for the site -->
         <nav>
             <ul>
-                <li><a href="Index.html" class="navLink">Home</a></li>
+                <li><a href="#intro" class="navLink">Home</a></li>
                 <li><a href="#mySkills" class="navLink">My Skills</a></li>
                 <li><a href="#myProjects" class="navLink">Projects</a></li>
                 <li><a href="CV.docx" target="_blank" class="navLink">My Resume</a></li>
