--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- navigation bar for the site -->
         <nav>
             <ul>
-                <li><a href="#intro" class="navLink">Home</a></li>
+                <li><a href="Index.html" class="navLink">Home</a></li>
                 <li><a href="#mySkills" class="navLink">My Skills</a></li>
                 <li><a href="#myProjects" class="navLink">Projects</a></li>
                 <li><a href="CV.docx" target="_blank" class="navLink">My Resume</a></li>
@@ -66,6 +66,7 @@
                 </li>
                 <li><a href="Projects/pokedex.html" target="_blank" id="pokedex"><img src="Resources/pokeball.jpg"><br>Full Pokedex</a></li>
                 <li><a href="https://github.com/SackyChan/simpleDB" target="_blank" id="simpledb"><img src="Resources/Database-icon.png"><br>Simple Database</a></li>
+                <li><a href="Projects/maze.html" target="_blank" id="ghostMaze"><img src="Resources/maze_ghost.PNG"><br>Ghost Escape!, maze game</a></li>
             </ul>
         </div>
         <br>
