--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 </li>
                 <li><a href="Projects/pokedex.html" target="_blank" id="pokedex"><img src="Resources/pokeball.jpg"><br>Full Pokedex</a></li>
                 <li><a href="https://github.com/SackyChan/simpleDB" target="_blank" id="simpledb"><img src="Resources/Database-icon.png"><br>Simple Database</a></li>
+                <li><a href="Projects/maze.html" target="_blank" id="ghostMaze"><img src="Resources/maze_ghost.PNG"><br>Ghost Escape!, maze game</a></li>
             </ul>
         </div>
         <br>
