--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#intro" class="navLink">Home</a></li>
                 <li><a href="#mySkills" class="navLink">My Skills</a></li>
                 <li><a href="#myProjects" class="navLink">Projects</a></li>
-                <li><a href="CV.docx" target="_blank" class="navLink">My Resume</a></li>
+                <li><a href="./IsaacSnowdonCV.docx" target="_blank" class="navLink">My Resume</a></li>
             </ul>
         </nav>
     
